fix: misc small Pattern Lab UI bug fixes uncovered in testing things out for the next release

--- a/packages/uikit-workshop/src/sass/scss/04-components/_pattern-info.scss
+++ b/packages/uikit-workshop/src/sass/scss/04-components/_pattern-info.scss
@@ -22,6 +22,7 @@
     min-height: 18rem;
     overflow: scroll;
     @include hideScrollBar();
+    display: flex;
     -webkit-overflow-scrolling: touch;
 
     @media all and (min-width: $pl-bp-large) {
@@ -37,13 +38,17 @@
   .pl-c-modal & {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 0.8rem;
     bottom: 0;
     left: 0;
     overflow: scroll;
     @include hideScrollBar();
     -webkit-overflow-scrolling: touch;
     flex-grow: 1;
+
+    @supports (padding: env(safe-area-inset-right)){
+      right: calc(env(safe-area-inset-right) + 0.8rem);
+    }
 
     @media all and (min-width: $pl-bp-large) {
       position: static;
@@ -59,10 +64,8 @@
  */
 .pl-c-pattern-info__panel {
   padding: 1rem;
+  width: 100%;
 
-  @media all and (min-width: $pl-bp-med) {
-    padding-right: 2.3rem;
-  }
 
   @media all and (min-width: $pl-bp-large) {
     flex: auto;
@@ -70,18 +73,15 @@
     top: 0;
     bottom: 0;
     left: 0;
-    right: 1.3rem;
-    padding-right: 0;
+    right: 0;
 
-    @supports (padding: env(safe-area-inset-right)){
-      right: calc(env(safe-area-inset-right) + 1.3rem);
-    }
   }
 
   .pl-c-modal & {
-    @media all and (min-width: $pl-bp-xl) {
-      padding-left: 1rem;
-      padding-right: 0;
+    padding-right: 1.3rem;
+
+    @supports (padding: env(safe-area-inset-right)){
+      padding-right: calc(env(safe-area-inset-right) + 1.3rem);
     }
   }
 }
